...
                guard let comp = completion else { return }
                comp()
            })
        }
    }
    
    func showAppAlertWithOK(title:String = "Alert" ,message : String,
                         buttonTitle : String = "OK",
                         buttonAction :( ()->Void )?,
                         cancelAlertOnClick : Bool = true,
                         style: UIAlertController.Style,
                         buttonStyle : UIAlertAction.Style = .default, completion: ( ()->Void )?){
        
        let action = UIAlertAction(title: buttonTitle, style: buttonStyle) { _ in
...
