...
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IC7-kY-IKu">
                                                <rect key="frame" x="8" y="373" width="398" height="140"/>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="notes_txt"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" priority="999" constant="140" id="0sG-03-353"/>
                                                </constraints>
                                                <color key="textColor" systemColor="labelColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="4s3-XW-9HQ"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="BwT-Au-jga"/>
                                                </constraints>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Save"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                                        <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                        <real key="value" value="1"/>
...
