...
    var userListPresenter: UserListPresenter?
    var userListViewModel = UserListViewModel()
    
    //MARK: - Controls
    lazy var tableView : UITableView = {
        let tableview = UITableView()
        tableview.accessibilityIdentifier = "UsersTableView"
        return tableview
    }()
    
    lazy var searchController : UISearchController = {
        let searchControl = UISearchController()
        searchControl.searchResultsUpdater = self
...
